--- a/profile.html
+++ b/profile.html
@@ -32,13 +32,11 @@
     </nav>
     <div class="containers">
         <div class="cards" style="flex-direction:row">
-            <img src="assets/me.jpg" width="550rem" alt="">
+            <img src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="">
             <div class="card-content">
-                <h3 class="card-title" style="color:black;font-size:3rem;">Syahrul Pangestu</h3>
-                <h6 class="card-title" style="color:grey;margin-bottom:2rem">Informatics</h6>
-                <h4 style="color:black;font-size:1rem">I'm a cyber security analyst dedicated to serve as the first responder to computer security incidents within the department and to perform vital functions in identifying, mitigating, reviewing, documenting, and reporting findings to management. i've 4 years of experience in software engineering and i've consistently gained relevant experience in informatics, which allowed me to build on my problem solving, concentration and team working skills.</h4>
-                <h4 style="color:black;font-size:1rem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-                <h4 style="color:black;font-size:1rem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</h4>
+                <h3 class="card-titke">Syahrul Pangestu</h3>
+                <h6 class="card-titke" style="margin-bottom:2rem">Informatics</h6>
+                <p class="card-text">i'm a cyber security analyst dedicated to serve as the first responder to computer security incidents within the department and to perform vital functions in identifying, mitigating, reviewing, documenting, and reporting findings to management. i've 4 years of experience in software engineering and i've consistently gained relevant experience in informatics, which allowed me to build on my problem solving, concentration and team working skills.</p>
             </div>
         </div>
     </div>
@@ -53,7 +51,7 @@
                                 <img src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="" srcset="">
                             </div>
                             <div class="card-content">
-                                <h3 class="card-title">Halo semua</h3>
+                                <h3 class="card-titke">Halo semua</h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia semper urna a semper. Mauris sollicitudin varius purus, ut mollis eros sollicitudin vel.</p>
                                 <span class="card-author">Tri Widiarsih</span>
                                 <span class="card-date">12 November 2001</span>
@@ -66,7 +64,7 @@
                                 <img src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="" srcset="">
                             </div>
                             <div class="card-content">
-                                <h3 class="card-title">Halo semua</h3>
+                                <h3 class="card-titke">Halo semua</h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia semper urna a semper. Mauris sollicitudin varius purus, ut mollis eros sollicitudin vel.</p>
                                 <span class="card-author">Tri Widiarsih</span>
                                 <span class="card-date">12 November 2001</span>
@@ -79,7 +77,7 @@
                                 <img src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="" srcset="">
                             </div>
                             <div class="card-content">
-                                <h3 class="card-title">Halo semua</h3>
+                                <h3 class="card-titke">Halo semua</h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia semper urna a semper. Mauris sollicitudin varius purus, ut mollis eros sollicitudin vel.</p>
                                 <span class="card-author">Tri Widiarsih</span>
                                 <span class="card-date">12 November 2001</span>
